--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,8 +2,8 @@
   "tasks": {
     "build": "deno run -A server/build.ts",
     "build:watch": "deno run --cached-only --watch -A server/build.ts dev",
-    "serve": "deno run --watch -A server/main.ts",
-    "dev": "deno task build && deno task serve & deno task build:watch "
+    "serve": "deno run -A server/main.ts",
+    "dev": "deno task build:watch & deno task serve "
   },
   "compilerOptions": {
     "strict": true,
