fix: make esbuild work

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,7 +3,7 @@
     "build": "deno run -A server/build.ts",
     "build:watch": "deno run --watch -A server/build.ts dev",
     "serve": "deno run --watch -A server/main.ts",
-    "dev": "deno task build && deno task serve & deno task build:watch "
+    "dev": "deno task build:watch & deno task serve "
   },
   "compilerOptions": {
     "strict": true,
