--- a/deno.jsonc
+++ b/deno.jsonc
@@ -13,7 +13,7 @@
   },
   "lint": {
     "files": {
-      "exclude": ["build"]
+      "exclude": ["src/_site/build"]
     }
   },
   "fmt": { "options": { "useTabs": true } }
