--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,9 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "mononykus"
-          entrypoint: "https://deno.land/std@0.183.0/http/file_server.ts src/_site/build"
+          project: mononykus
+          entrypoint: https://deno.land/std@0.183.0/http/file_server.ts
+          root: src/_site/build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
