fix: correct permissions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ env:
 permissions:
   contents: read # Needed to clone the repository
   id-token: write # Needed for authentication
+  pages: write # Needed for Github Pages
 
 jobs:
   deno:
