--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  DENO_DIR: ./cache
+  DENO_DIR: ./.cache
 
 jobs:
   health:
@@ -30,6 +30,3 @@ jobs:
 
       - name: Lint
         run: deno lint
-
-      - name: Test
-        run: deno test
