--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,9 +1,7 @@
 {
 	"tasks": {
 		"build": "deno run -A src/build.ts --site src/_site",
-		"build:watch": "deno run -A src/build.ts --site src/_site --dev",
-		"serve": "deno run --allow-read --allow-net https://deno.land/std@0.183.0/http/file_server.ts src/_site/build",
-		"dev": "deno task build:watch & deno task serve "
+		"dev": "deno run -A src/build.ts --site src/_site --dev --base=mononykus"
 	},
 	"compilerOptions": {
 		"strict": true,
