--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
           key: ${{ hashFiles('deno.lock') }}
 
       - name: Build svelte for GH
-        run: deno run -A src/build.ts --site=src/_site --build=dist --base=mononykus
+        run: deno run -A src/build.ts --site=src/_site --base=mononykus
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -80,7 +80,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: dist
+          path: src/_site/build
 
       - name: Deploy to GitHub Pages
         id: deployment
