refactor: simplify build process
- no more context, independent builds are fast enough
- reorganised plugins & names
- islands write themselves
- default deployment is GH

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,8 @@
 {
 	"tasks": {
-		"build": "deno run -A src/build.ts --site src/_site",
-		"dev": "deno run -A src/build.ts --site src/_site --dev --base=mononykus"
+		"build": "deno run -A src/build.ts --site src/_site --base=mononykus",
+		"dev": "deno run -A src/build.ts --site src/_site --dev --base=mononykus",
+		"dev:watch": "deno run -A --watch src/build.ts --site src/_site --dev --base=mononykus"
 	},
 	"compilerOptions": {
 		"strict": true,
