--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           key: ${{ hashFiles('deno.lock') }}
 
       - name: Build svelte
-        run: deno task build
+        run: deno run -A src/build.ts --site=src/_site
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
@@ -72,7 +72,7 @@ jobs:
           key: ${{ hashFiles('deno.lock') }}
 
       - name: Build svelte for GH
-        run: deno run -A src/build.ts --site=src/_site --base=mononykus
+        run: deno task build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
