fix: all paths are absolute
default build output is now current working directory

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           project: mononykus
           entrypoint: https://deno.land/std@0.183.0/http/file_server.ts
-          root: src/_site/build
+          root: build
 
   gh:
     if: github.ref_name == 'main'
@@ -80,7 +80,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: src/_site/build
+          path: build
 
       - name: Deploy to GitHub Pages
         id: deployment
