--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
 	"tasks": {
-		"build": "deno run -A src/build.ts --site src/_site",
-		"dev": "deno run -A src/build.ts --site src/_site --dev --base=mononykus"
+		"build": "deno run -A src/build.ts --site_dir src/_site",
+		"dev": "deno run -A src/build.ts --site_dir src/_site --watch --base=mononykus"
 	},
 	"compilerOptions": {
 		"strict": true,
