chore(deno.json): use flat config

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,12 +10,10 @@
 		"noUncheckedIndexedAccess": true
 	},
 	"lint": {
-		"files": {
-			"exclude": ["src/_site/build", ".cache"]
-		}
+		"exclude": ["build", "src/_site/build", ".cache"]
 	},
 	"fmt": {
-		"options": { "useTabs": true },
-		"files": { "exclude": ["src/_site/build", ".cache"] }
+		"useTabs": true,
+		"exclude": ["build", "src/_site/build", ".cache"]
 	}
 }
