chore(IDE): VSCode default formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,12 @@
 	"[jsonc]": {
 		"editor.defaultFormatter": "denoland.vscode-deno"
 	},
+	"[javascript]": {
+		"editor.defaultFormatter": "denoland.vscode-deno"
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "denoland.vscode-deno"
+	},
 	"cSpell.words": [
 		"hydrator",
 		"mononykus"
