--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,7 @@
 {
+	"name": "@mxdvl/mononykus",
+	"version": "0.7.3",
+	"exports": "./src/build.ts",
 	"tasks": {
 		"build": "deno run -A src/build.ts --site_dir src/_site",
 		"dev": "deno run -A src/build.ts --site_dir src/_site --watch --base=mononykus"
