fix: make deno work on Zed

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -4,6 +4,7 @@
 			"language_servers": [
 				"deno",
 				"!typescript-language-server",
+				"!vtsls",
 				"!eslint",
 				"..."
 			],
@@ -21,6 +22,7 @@
 			"language_servers": [
 				"deno",
 				"!typescript-language-server",
+				"!vtsls",
 				"!eslint",
 				"..."
 			],
