--- a/deno.json
+++ b/deno.json
@@ -21,6 +21,7 @@
 	},
 	"imports": {
 		"@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.10.3",
+		"@std/assert": "jsr:@std/assert@^0.226.0",
 		"@std/cli": "jsr:@std/cli@^0.224.7",
 		"@std/fs": "jsr:@std/fs@^0.229.3",
 		"@std/http": "jsr:@std/http@^0.224.5",
