--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ permissions:
   id-token: write # Needed for authentication
   pages: write # Needed for Github Pages
 
+env:
+  DENO_DIR: /var/cache/deno
+
 jobs:
   deno:
     name: Deploy to Deno Deploy
@@ -26,7 +29,8 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1
+      - name: Set up Deno
+        uses: denoland/setup-deno@v1
         with:
           deno-version: v1.44
 
@@ -58,7 +62,8 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1
+      - name: Set up Deno
+        uses: denoland/setup-deno@v1
         with:
           deno-version: v1.44
 
