--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -6,13 +6,18 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  DENO_DIR: /var/cache/deno
+
 jobs:
   health:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1
+      - name: Set up Deno
+        uses: denoland/setup-deno@v1
         with:
           deno-version: v1.44
 
@@ -27,7 +32,7 @@ jobs:
 
       - name: Lint
         run: deno lint
-      
+
       - name: Test
         run: deno test -A --no-check
 
