--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
 	"name": "@mxdvl/mononykus",
 	"version": "0.7.7",
+	"license": "MIT",
 	"exports": "./src/build.ts",
 	"tasks": {
 		"build": "deno run -A src/build.ts --site_dir src/_site",
