--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -11,16 +11,14 @@
 			"format_on_save": {
 				"external": {
 					"command": "deno",
-					"arguments": [
-						"fmt",
-						"-"
-					]
+					"arguments": ["fmt", "-"]
 				}
 			}
 		},
 		"TypeScript": {
 			"language_servers": [
 				"deno",
+				"!ts",
 				"!typescript-language-server",
 				"!vtsls",
 				"!eslint",
@@ -29,10 +27,7 @@
 			"format_on_save": {
 				"external": {
 					"command": "deno",
-					"arguments": [
-						"fmt",
-						"-"
-					]
+					"arguments": ["fmt", "-"]
 				}
 			}
 		}
