--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,8 @@
 	"license": "MIT",
 	"exports": "./src/build.ts",
 	"tasks": {
-		"build": "deno run -A src/build.ts --site_dir src/_site",
-		"dev": "deno run -A src/build.ts --site_dir src/_site --watch --base=mononykus"
+		"build": "NODE_ENV=production deno run -A src/build.ts --site_dir src/_site",
+		"dev": "NODE_ENV=development deno run -A src/build.ts --site_dir src/_site --watch --base=mononykus"
 	},
 	"compilerOptions": {
 		"strict": true,
@@ -22,14 +22,15 @@
 	},
 	"imports": {
 		"@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.10.3",
-		"@std/assert": "jsr:@std/assert@^0.226.0",
-		"@std/cli": "jsr:@std/cli@^0.224.7",
-		"@std/fs": "jsr:@std/fs@^0.229.3",
-		"@std/http": "jsr:@std/http@^0.224.5",
-		"@std/path": "jsr:@std/path@^0.225.2",
-		"@std/testing": "jsr:@std/testing@^0.225.2",
-		"esbuild": "npm:esbuild@0.20.2",
-		"prettier": "npm:prettier@3.0.2",
-		"svelte": "npm:svelte@4.2.12"
+		"@std/assert": "jsr:@std/assert@^1.0.8",
+		"@std/async": "jsr:@std/async@^1.0.9",
+		"@std/cli": "jsr:@std/cli@^1.0.7",
+		"@std/fs": "jsr:@std/fs@^1.0.6",
+		"@std/http": "jsr:@std/http@^1.0.11",
+		"@std/path": "jsr:@std/path@^1.0.8",
+		"@std/testing": "jsr:@std/testing@^1.0.5",
+		"esbuild": "npm:esbuild@~0.24.0",
+		"prettier": "npm:prettier@^3.0.2",
+		"svelte": "npm:svelte@5.4.0"
 	}
 }
