fix: a relative DENO_DIR

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ permissions:
   id-token: write # Needed for authentication
   pages: write # Needed for Github Pages
 
+env:
+  DENO_DIR: cache/deno
+
 jobs:
   deno:
     name: Deploy to Deno Deploy
