--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,8 @@
 	"license": "MIT",
 	"exports": "./src/build.ts",
 	"tasks": {
-		"build": "deno run -A src/build.ts --site_dir src/_site",
-		"dev": "deno run -A src/build.ts --site_dir src/_site --watch --base=mononykus"
+		"build": "NODE_ENV=production deno run -A src/build.ts --site_dir src/_site",
+		"dev": "NODE_ENV=development deno run -A src/build.ts --site_dir src/_site --watch --base=mononykus"
 	},
 	"compilerOptions": {
 		"strict": true,
@@ -29,6 +29,6 @@
 		"@std/path": "jsr:@std/path@^1.0.6",
 		"esbuild": "npm:esbuild@~0.24.0",
 		"prettier": "npm:prettier@^3.0.2",
-		"svelte": "npm:svelte@5.7.1"
+		"svelte": "npm:svelte@5.9.0"
 	}
 }
