chore: bump to v0.8.6

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,5 +1,39 @@
 {
 	"languages": {
+		"JSONC": {
+			"prettier": {
+				"allowed": false
+			},
+			"formatter": {
+				"external": {
+					"command": "deno",
+					"arguments": ["fmt", "-"]
+				}
+			},
+			"format_on_save": {
+				"external": {
+					"command": "deno",
+					"arguments": ["fmt", "-"]
+				}
+			}
+		},
+		"JSON": {
+			"prettier": {
+				"allowed": false
+			},
+			"formatter": {
+				"external": {
+					"command": "deno",
+					"arguments": ["fmt", ""]
+				}
+			},
+			"format_on_save": {
+				"external": {
+					"command": "deno",
+					"arguments": ["fmt", "-"]
+				}
+			}
+		},
 		"JavaScript": {
 			"language_servers": [
 				"deno",
